test/fixtures/cli/ecma.txt

test/fixtures/cli/ecma.js:1:5: error: expected ';' after expression
let a = 7;
    ^

1 error generated.
